spade-tests/src/snapshots/spade_tests__hir_lowering__tests__using_unavailable_variable_causes_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
pipeline(5) X(clk: clock) -> bool {reg*5; false}

pipeline(5) main(clk: clock, x: bool) -> bool {
        let x = inst(5) X(clk);
    reg;
        let res = x;
    reg*4;
        res
}


error: Use of x before it is ready
  ┌─ testinput:6:19
  │
4 │         let x = inst(5) X(clk);
  │             - x is defined here at stage 0 with a latency of 5
5 │     reg;
6 │         let res = x;
  │                   ^
  │                   │
  │                   x is unavailable for another 4 stages
  │                   This is stage 1
  │
  = note: Requesting x at stage 1
  = note: But it will not be available until stage 5
  = help: Consider adding more reg; statements between the definition and use of x
